--- a/MyApi/appsettings.Development.json
+++ b/MyApi/appsettings.Development.json
@@ -1,11 +1,12 @@
 {
-    "ConnectionStrings": {
-        "SqlServer": "Data Source=.;Initial Catalog=MyApiDb;Integrated Security=true;TrustServerCertificate=True"
-    },
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
+  "ConnectionStrings": {
+    "SqlServer": "Data Source=.;Initial Catalog=MyApiDb;Integrated Security=true;TrustServerCertificate=True",
+    "Elmah": "Data Source=.;Initial Catalog=MyApiDb;Integrated Security=true"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
+  }
 }
